--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
 		<div id="wrong">
 			Try again
 		</div>
+		<div id="question">
+			7x9
+		</div>
+		<div id="instruction">
+			Click on the correct answer
+		</div>
+		<div id="choices">
+			<div id="box1" class="box">4</div>
+			<div id="box2" class="box"></div>
+			<div id="box3" class="box"></div>
+			<div id="box4" class="box"></div>
+		</div>
 	</div>
 </body>
 </html>
