--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 			<div id="box3" class="box"></div>
 			<div id="box4" class="box"></div>
 		</div>
+		<div id="startreset">
+			Start Game
+		</div>
+		<div id="timeremaining">
+			Time remaining: <span id="timeremainingvalue">60</span> sec
+		</div>
 	</div>
 </body>
 </html>
